--- a/css/custom.css
+++ b/css/custom.css
@@ -14,7 +14,9 @@
     font-size: 60px !important;
 }
 
-
+.refrence {
+    font-size: 40px !important;
+}
 
 .cross-validation {
     width: 1000px !important;
